fixed col overflow issue

--- a/src/css/GridLayout.css
+++ b/src/css/GridLayout.css
@@ -1,7 +1,13 @@
+#grid {
+  float: left;
+  width: min-content;
+  overflow-x: scroll;
+}
+
 #grid * {
   border: solid;
   border-width: 0.2px;
-  width: auto;
+  width: max-content;
   height: 40px;
   animation-name: spin-in;
   animation-timing-function: linear;
